--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       - "8080:80"
     restart: always
     volumes:
-      - ./wp-content/themes/masterchef:/var/www/html/wp-content/themes/masterchef
-      - ./wp-content/plugins/recipe-plugin:/var/www/html/wp-content/plugins/recipe-plugin
+      - ./masterchef:/var/www/html/wp-content/themes/masterchef
+      - ./recipe-plugin:/var/www/html/wp-content/plugins/recipe-plugin
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: wordpress
