--- a/.github/workflows/package-plugin.yml
+++ b/.github/workflows/package-plugin.yml
@@ -30,7 +30,7 @@ jobs:
           zip -r ../recipe-plugin-${{ steps.plugin_version.outputs.version }}.zip .
       
       - name: Upload plugin package
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: recipe-plugin-${{ steps.plugin_version.outputs.version }}
           path: recipe-plugin-${{ steps.plugin_version.outputs.version }}.zip
@@ -39,22 +39,12 @@ jobs:
       - name: Create Release
         if: github.event_name != 'pull_request'
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: plugin-v${{ steps.plugin_version.outputs.version }}
-          release_name: Recipe Plugin v${{ steps.plugin_version.outputs.version }}
+          name: Recipe Plugin v${{ steps.plugin_version.outputs.version }}
           draft: false
           prerelease: false
-      
-      - name: Upload Release Asset
-        if: github.event_name != 'pull_request'
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./recipe-plugin-${{ steps.plugin_version.outputs.version }}.zip
-          asset_name: recipe-plugin-${{ steps.plugin_version.outputs.version }}.zip
-          asset_content_type: application/zip
+          files: recipe-plugin-${{ steps.plugin_version.outputs.version }}.zip
