--- a/.github/workflows/package-theme.yml
+++ b/.github/workflows/package-theme.yml
@@ -26,13 +26,13 @@ jobs:
           # Remove unnecessary development files
           rm -rf .git .github .gitignore .DS_Store
           # Create zip package
-          zip -r ../culinarylab-${{ steps.theme_version.outputs.version }}.zip .
+          zip -r ../culinarylab.zip .
       
       - name: Upload theme package
         uses: actions/upload-artifact@v4
         with:
-          name: culinarylab-theme-${{ steps.theme_version.outputs.version }}
-          path: culinarylab-${{ steps.theme_version.outputs.version }}.zip
+          name: culinarylab-theme
+          path: culinarylab.zip
           retention-days: 90
       
       - name: Create Release
@@ -45,4 +45,4 @@ jobs:
           name: CulinaryLab Theme v${{ steps.theme_version.outputs.version }}
           draft: false
           prerelease: false
-          files: culinarylab-${{ steps.theme_version.outputs.version }}.zip
+          files: culinarylab.zip
