--- a/.github/workflows/deploy-sftp.yml
+++ b/.github/workflows/deploy-sftp.yml
@@ -23,7 +23,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: package-plugin.yml
-          name: culinarylab-theme-1.1.2
+          name: recipe-plugin-1.1.2
           path: ./artifacts/plugin
       
       - name: Install SSH key
